Fixed component alignment Fixed button styles

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ header {
 
 .content {
   flex: 1;
+  width: 500px;
+  margin: auto;
 }
 
 footer {
