--- a/src/components/board/sudokuBoard.module.scss
+++ b/src/components/board/sudokuBoard.module.scss
@@ -1,7 +1,7 @@
 .grid {
   width: 500px;
   height: 500px;
-  margin: 10px auto;
+  margin: 0 auto 2em;
   box-sizing: border-box;
   display: block;
 }
